--- a/web/CSS/accountlist.css
+++ b/web/CSS/accountlist.css
@@ -20,7 +20,12 @@ and open the template in the editor.
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: white;
+    /*
+    background-color: grey;
+    background-image: url('https://miro.medium.com/max/4800/0*Ujfq0bFIEYEoMiEG');
+    */
+    background:linear-gradient(rgba(0, 0, 0, 0.5) 100%, rgba(0, 0, 0, 0.5)100%), url('https://miro.medium.com/max/4800/0*Ujfq0bFIEYEoMiEG');
+   
 }
 
 nav {
@@ -181,6 +186,12 @@ section {
     
     
 }
+.table-style tbody tr:nth-of-type(odd) {
+    background-color: white;
+    
+    
+}
+
 
 .table-style tbody tr:last-of-type {
     border-bottom: 2px solid #3CB371;
