--- a/web/CSS/changepassword.css
+++ b/web/CSS/changepassword.css
@@ -138,10 +138,14 @@ header::after {
 */
 
 body {
+    /*
     margin: 0;
     padding: 0;
     font-family: sans-serif;
     background: #3CB371;
+    */
+    font-family: Arial, Helvetica, sans-serif;
+    background:linear-gradient(rgba(0, 0, 0, 0.5) 100%, rgba(0, 0, 0, 0.5) 100%), url('https://miro.medium.com/max/4800/0*Ujfq0bFIEYEoMiEG');
 }
 
 
