--- a/web/CSS/profile.css
+++ b/web/CSS/profile.css
@@ -81,8 +81,12 @@ header::after {
 }
 
 body {
+    /*
     font-family: Arial, Helvetica, sans-serif;
-    background-color: white;
+    background-image: url('https://miro.medium.com/max/4800/0*Ujfq0bFIEYEoMiEG');
+    */
+    font-family: Arial, Helvetica, sans-serif;
+    background:linear-gradient(rgba(0, 0, 0, 0.5) 100%, rgba(0, 0, 0, 0.5) 100%), url('https://miro.medium.com/max/4800/0*Ujfq0bFIEYEoMiEG');
 }
 
 nav {
@@ -239,6 +243,13 @@ section {
     
     
 }
+
+.table-style tbody tr:nth-of-type(odd) {
+    background-color: white;
+    
+    
+}
+
 
 .table-style tbody tr:last-of-type {
     border-bottom: 2px solid #3CB371;
