--- a/web/CSS/login.css
+++ b/web/CSS/login.css
@@ -110,3 +110,22 @@ body {
 .errorinfo {
     color: red;
 }
+
+a:link {
+   text-decoration: none;
+   color: gray;
+}
+
+a:visited {
+    
+}
+
+a:hover {
+    color:#0082e6;
+    font-weight: bold;
+    text-decoration: underline;
+}
+
+a:active {
+    
+}
