--- a/web/CSS/index.css
+++ b/web/CSS/index.css
@@ -4,8 +4,8 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.
 */
 /* 
-    Created on : 
-    Author     : 
+    Created on :  jung
+    Author     :  yeh
 */
 /*
 h1 {
